[dyad] He actualizado los archivos de idioma para incluir las traducciones necesarias para el análisis de menú, asegurando que los usuarios en inglés y español tengan una experiencia localizada. - wrote 2 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -207,6 +207,11 @@
     "disclaimer_text": "The results from this scanner are AI-based estimations. They may not be 100% accurate and should not be considered medical advice.",
     "disclaimer_accept": "I Understand"
   },
+  "menu_analysis": {
+    "title": "Menu Analysis",
+    "recommended": "Best Options",
+    "avoid": "Limit or Avoid"
+  },
   "analysis": {
     "calories": "Calories",
     "protein": "Protein",
