[dyad] He implementado la funcionalidad de "deslizar para eliminar" (swipe-to-delete) en el registro de actividades diarias. He creado un componente `SwipeToDelete` reutilizable, actualizado el contexto de nutrición para manejar el borrado de datos e integrado todo en la pantalla principal. - wrote 5 file(s)

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -11,7 +11,8 @@
     "ai_limit_reached": "Límite de IA alcanzado",
     "ai_limit_daily_desc": "Has alcanzado el límite de {{limit}} usos diarios para esta función. Vuelve mañana para continuar.",
     "ai_limit_weekly_desc": "Has alcanzado el límite de {{limit}} usos semanales para esta función. Vuelve la próxima semana para continuar.",
-    "add": "Añadir"
+    "add": "Añadir",
+    "deleted_success": "Eliminado correctamente"
   },
   "auth": {
     "email_label": "Correo electrónico",
