--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,7 +11,8 @@
     "ai_limit_reached": "AI Limit Reached",
     "ai_limit_daily_desc": "You have reached the daily limit of {{limit}} uses for this feature. Please come back tomorrow to continue.",
     "ai_limit_weekly_desc": "You have reached the weekly limit of {{limit}} uses for this feature. Please come back next week to continue.",
-    "add": "Add"
+    "add": "Add",
+    "deleted_success": "Deleted successfully"
   },
   "auth": {
     "email_label": "Email address",
