[dyad] He actualizado la tarjeta de registro para que, al mostrar un "análisis de menú", oculte los macros y muestre un botón "Ver Resultados" en su lugar. - wrote 4 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -211,7 +211,8 @@
   "menu_analysis": {
     "title": "Menu Analysis",
     "recommended": "Best Options",
-    "avoid": "Limit or Avoid"
+    "avoid": "Limit or Avoid",
+    "view_result": "View Analysis"
   },
   "analysis": {
     "calories": "Calories",
