[dyad] He añadido una nota aclaratoria al final del análisis del menú, indicando que la IA filtra el contenido para mostrar solo lo más relevante. He actualizado el componente `MenuAnalysisDrawer.tsx` y los archivos de traducción en inglés y español. - wrote 2 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -212,7 +212,8 @@
     "title": "Menu Analysis",
     "recommended": "Best Options",
     "avoid": "Limit or Avoid",
-    "view_result": "View Analysis"
+    "view_result": "View Analysis",
+    "partial_list_note": "Note: This analysis does not list the entire menu. The AI has filtered the content to show only the best options for your goal and what to avoid."
   },
   "analysis": {
     "calories": "Calories",
@@ -536,123 +537,123 @@
     "weight": "Weight",
     "years_unit": "years",
     "gender": "Gender",
-    "goal": "Goal",
-    "experience": "Experience",
-    "gender_female": "Female",
-    "gender_male": "Male",
-    "gender_not_say": "Prefer not to say",
-    "goal_lose": "Lose Weight",
-    "goal_maintain": "Maintain Weight",
-    "goal_gain": "Gain Weight",
-    "experience_several": "Used several apps",
-    "experience_one_or_two": "Used one or two apps",
-    "experience_first_time": "First time using an app"
+    "goal": "Objetivo",
+    "experience": "Experiencia",
+    "gender_female": "Femenino",
+    "gender_male": "Masculino",
+    "gender_not_say": "Prefiero no decirlo",
+    "goal_lose": "Perder Peso",
+    "goal_maintain": "Mantener Peso",
+    "goal_gain": "Ganar Peso",
+    "experience_several": "Usé varias apps",
+    "experience_one_or_two": "Usé una o dos apps",
+    "experience_first_time": "Primera vez usando una app"
   },
   "preferences": {
-    "title": "Preferences",
-    "theme_title": "App Theme",
-    "theme_light": "Light",
-    "theme_dark": "Dark",
-    "theme_system": "System",
-    "time_format_title": "Time Format",
-    "time_format_12h": "12-Hour (AM/PM)",
-    "time_format_24h": "24-Hour",
-    "toast_error": "Failed to save preference."
+    "title": "Preferencias",
+    "theme_title": "Tema de la Aplicación",
+    "theme_light": "Claro",
+    "theme_dark": "Oscuro",
+    "theme_system": "Sistema",
+    "time_format_title": "Formato de Hora",
+    "time_format_12h": "12 Horas (AM/PM)",
+    "time_format_24h": "24 Horas",
+    "toast_error": "Fallo al guardar la preferencia."
   },
   "nutritional_goals": {
-    "title": "Nutritional Goals",
-    "daily_goals": "Daily Macro Goals",
-    "subtitle": "Adjust your daily targets. Changes are saved automatically.",
-    "calories": "Calories",
-    "protein": "Protein",
+    "title": "Metas Nutricionales",
+    "daily_goals": "Metas Diarias de Macros",
+    "subtitle": "Ajusta tus objetivos diarios. Los cambios se guardan automáticamente.",
+    "calories": "Calorías",
+    "protein": "Proteína",
     "carbs": "Carbohidratos",
     "fats": "Grasas",
     "sugars": "Azúcares",
-    "save_error": "Failed to save goals.",
-    "ai_suggestions": "AI Suggestions"
+    "save_error": "Fallo al guardar las metas.",
+    "ai_suggestions": "Sugerencias de IA"
   },
   "ai_suggestions": {
-    "workouts_label": "Weekly Workouts",
-    "workouts_per_week": "per week",
-    "workouts_light": "Light (1-2)",
+    "workouts_label": "Entrenamientos Semanales",
+    "workouts_per_week": "por semana",
+    "workouts_light": "Ligero (1-2)",
     "workouts_moderate": "Moderado (3-4)",
     "workouts_active": "Activo (5-6)",
-    "workouts_very_active": "Very Active (7+)",
-    "goal_weight_label": "Goal Weight",
-    "rate_label": "Weekly Rate",
-    "week": "week",
-    "summary_title": "Summary & Generation",
-    "disclaimer": "The AI will use this information to calculate your optimal calorie and macro goals.",
-    "continue": "Continue",
-    "generate": "Generate Goals",
-    "generate_loading": "Generating...",
-    "toast_success": "New goals generated and saved!",
-    "toast_error": "Failed to generate goals."
+    "workouts_very_active": "Muy Activo (7+)",
+    "goal_weight_label": "Meta de Peso",
+    "rate_label": "Ritmo Semanal",
+    "week": "semana",
+    "summary_title": "Resumen y Generación",
+    "disclaimer": "La IA utilizará esta información para calcular tus objetivos óptimos de calorías y macros.",
+    "continue": "Continuar",
+    "generate": "Generar Metas",
+    "generate_loading": "Generando...",
+    "toast_success": "¡Nuevas metas generadas y guardadas!",
+    "toast_error": "Fallo al generar metas."
   },
   "weight_goal": {
-    "title": "Goal Weight",
-    "change_button": "Change Goal",
-    "current_weight": "Current Weight",
-    "height": "Height",
-    "gender": "Gender",
-    "updated_today": "Updated today"
+    "title": "Meta de Peso",
+    "change_button": "Cambiar Meta",
+    "current_weight": "Peso Actual",
+    "height": "Altura",
+    "gender": "Género",
+    "updated_today": "Actualizado hoy"
   },
   "ring_colors": {
-    "title": "Ring Colors",
-    "subtitle": "Understand what each color means in your daily progress rings.",
-    "green_title": "Green (Primary)",
-    "green_desc": "You are within 10% of your goal (or have exceeded it safely).",
-    "yellow_title": "Yellow (Amber)",
-    "yellow_desc": "You are between 10% and 20% over your goal (e.g., too many calories).",
-    "red_title": "Red (Destructive)",
-    "red_desc": "You are more than 20% over your goal, indicating a significant excess.",
-    "dotted_title": "Dotted Line",
-    "dotted_desc": "No data logged for this day yet."
+    "title": "Colores de Anillos",
+    "subtitle": "Entiende lo que significa cada color en tus anillos de progreso diario.",
+    "green_title": "Verde (Principal)",
+    "green_desc": "Estás dentro del 10% de tu objetivo (o lo has superado de forma segura).",
+    "yellow_title": "Amarillo (Ámbar)",
+    "yellow_desc": "Estás entre un 10% y un 20% por encima de tu objetivo (ej. demasiadas calorías).",
+    "red_title": "Rojo (Destructivo)",
+    "red_desc": "Estás más del 20% por encima de tu objetivo, indicando un exceso significativo.",
+    "dotted_title": "Línea Punteada",
+    "dotted_desc": "No hay datos registrados para este día aún."
   },
   "request_feature": {
-    "title": "Request a Feature",
-    "subtitle": "Help us improve Calorel!",
-    "description": "Vote for existing features or suggest a new one. The most voted features are prioritized.",
-    "search_placeholder": "Search for existing requests...",
-    "create_button": "New Request",
-    "delete_toast_success": "Request deleted successfully.",
-    "delete_toast_error": "Failed to delete request."
+    "title": "Solicitar una Función",
+    "subtitle": "¡Ayúdanos a mejorar Calorel!",
+    "description": "Vota por funciones existentes o sugiere una nueva. Las más votadas son priorizadas.",
+    "search_placeholder": "Buscar solicitudes existentes...",
+    "create_button": "Nueva Solicitud",
+    "delete_toast_success": "Solicitud eliminada con éxito.",
+    "delete_toast_error": "Fallo al eliminar solicitud."
   },
   "new_request_drawer": {
-    "title": "Suggest a New Feature",
-    "description": "Describe the feature you would like to see in Calorel.",
-    "title_label": "Title",
-    "title_placeholder": "e.g., Add Apple Health integration",
-    "desc_label": "Detailed Description",
-    "desc_placeholder": "Explain why this feature is important and how it should work.",
-    "submit_button": "Submit Request",
-    "cancel_button": "Cancel",
-    "toast_success": "Feature request submitted successfully!",
-    "toast_error": "Failed to submit request."
+    "title": "Sugerir una Nueva Función",
+    "description": "Describe la función que te gustaría ver en Calorel.",
+    "title_label": "Título",
+    "title_placeholder": "Ej: Añadir integración con Apple Health",
+    "desc_label": "Descripción Detallada",
+    "desc_placeholder": "Explica por qué es importante esta función y cómo debería funcionar.",
+    "submit_button": "Enviar Solicitud",
+    "cancel_button": "Cancelar",
+    "toast_success": "¡Solicitud de función enviada con éxito!",
+    "toast_error": "Fallo al enviar solicitud."
   },
   "language_drawer": {
-    "title": "Select Language"
+    "title": "Seleccionar Idioma"
   },
   "toasts": {
-    "coming_soon_title": "Coming Soon",
-    "coming_soon_desc": "This feature is under development.",
-    "delete_success_title": "Account Deleted",
-    "delete_success_desc": "Your account and all associated data have been permanently deleted.",
-    "delete_error_title": "Deletion Failed"
+    "coming_soon_title": "Próximamente",
+    "coming_soon_desc": "Esta función está en desarrollo.",
+    "delete_success_title": "Cuenta Eliminada",
+    "delete_success_desc": "Tu cuenta y todos los datos asociados han sido eliminados permanentemente.",
+    "delete_error_title": "Fallo al Eliminar"
   },
   "tutorial": {
-    "welcome_title": "Welcome to Calorel!",
-    "welcome_content": "Let's take a quick tour of the main features to get you started on your health journey.",
-    "carousel_title": "Your Daily Summary",
-    "carousel_content": "Here you'll find your daily progress for calories, macros, and other key metrics. Swipe to see more details!",
-    "scanner_title": "Log Everything Easily",
-    "scanner_content": "Tap the central button to open the menu. You can scan your food with AI, log an exercise, or add entries manually.",
-    "progress_title": "Track Your Progress",
-    "progress_content": "Visit the Progress tab to see your weight evolution, BMI, and track your daily streaks.",
-    "settings_title": "Customize Your Experience",
-    "settings_content": "In Settings, you can adjust your goals, change preferences, and manage your account.",
-    "finish": "Finish",
-    "next": "Next"
+    "welcome_title": "¡Bienvenido a Calorel!",
+    "welcome_content": "Vamos a dar un rápido recorrido por las funciones principales para que comiences tu viaje de salud.",
+    "carousel_title": "Tu Resumen Diario",
+    "carousel_content": "Aquí encontrarás tu progreso diario de calorías, macros y otras métricas clave. ¡Desliza para ver más detalles!",
+    "scanner_title": "Registra Todo Fácilmente",
+    "scanner_content": "Toca el botón central para abrir el menú. Puedes escanear tu comida con IA, registrar un ejercicio o añadir entradas manualmente.",
+    "progress_title": "Sigue Tu Progreso",
+    "progress_content": "Visita la pestaña de Progreso para ver la evolución de tu peso, tu IMC y seguir tus rachas diarias.",
+    "settings_title": "Personaliza Tu Experiencia",
+    "settings_content": "En Ajustes, puedes modificar tus metas, cambiar preferencias y gestionar tu cuenta.",
+    "finish": "Finalizar",
+    "next": "Siguiente"
   },
   "notifications": {
     "title": "Mantén la Constancia",
