[dyad] Agregué la traducción al español faltante en el archivo de localización para la nota de análisis de menú. - wrote 1 file(s)

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -211,7 +211,8 @@
     "title": "Análisis del Menú",
     "recommended": "Mejores Opciones",
     "avoid": "Limitar o Evitar",
-    "view_result": "Ver Resultados"
+    "view_result": "Ver Resultados",
+    "partial_list_note": "Nota: Este análisis no incluye todo el menú. La IA ha filtrado el contenido para mostrarte únicamente las mejores opciones para tu objetivo y aquellas que deberías evitar."
   },
   "analysis": {
     "calories": "Calorías",
