[dyad] He actualizado la Edge Function de análisis de comida para que la IA devuelva una lista de ingredientes detectados. También actualicé el componente `FoodAnalysisCard` y el `AnalysisDetailDrawer` para mostrar estos ingredientes debajo de los macros, y añadí las traducciones correspondientes. - wrote 5 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -230,7 +230,8 @@
     },
     "save_to_diary": "Save to Diary",
     "details_title": "Meal Details",
-    "close": "Close"
+    "close": "Close",
+    "detected_ingredients": "Detected Ingredients"
   },
   "manual_food": {
     "title": "Manual Food Entry",
