--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -54,8 +54,7 @@
       "description": "This helps us calculate your nutritional needs more accurately.",
       "female": "Female",
       "male": "Male",
-      "not_say": "Prefer not to say",
-      "unit": "years"
+      "not_say": "Prefer not to say"
     },
     "age": {
       "title": "How old are you?",
@@ -433,237 +432,251 @@
       "high": "Very Active",
       "high_desc": "Intense exercise 6-7 days/week."
     },
-    "step2_title": "Preferencias Dietéticas",
-    "step2_desc": "Selecciona cualquier restricción o preferencia dietética.",
+    "step2_title": "Dietary Preferences",
+    "step2_desc": "Select any dietary restrictions or preferences.",
     "preferences": {
-      "vegetarian": "Vegetariana",
-      "lactose_free": "Sin Lactosa",
-      "sugar_free": "Sin Azúcar",
-      "gluten_free": "Sin Gluten"
+      "vegetarian": "Vegetarian",
+      "lactose_free": "Lactose Free",
+      "sugar_free": "Sugar Free",
+      "gluten_free": "Gluten Free"
     },
-    "step2_tip": "Puedes seleccionar varias opciones.",
-    "step3_title": "Factores de Estilo de Vida",
-    "step3_desc": "Cuéntanos sobre tus hábitos de cocina y presupuesto.",
-    "cooking_time": "Tiempo de Cocina Disponible",
-    "budget": "Presupuesto para Compras",
+    "step2_tip": "You can select multiple options.",
+    "step3_title": "Lifestyle Factors",
+    "step3_desc": "Tell us about your cooking habits and budget.",
+    "cooking_time": "Available Cooking Time",
+    "budget": "Shopping Budget",
     "levels": {
-      "low": "Bajo",
-      "medium": "Medio",
-      "high": "Alto"
+      "low": "Low",
+      "medium": "Medium",
+      "high": "High"
     },
-    "next": "Siguiente",
-    "generate": "Generar Plan",
-    "toast_error_title": "Fallo al Generar Plan",
-    "generating_step1": "Analizando tus objetivos y preferencias...",
-    "generating_step2": "Adaptando el plan a la cocina local en {{country}}...",
-    "generating_step2_generic": "Adaptando el plan a la cocina occidental general...",
-    "generating_step3": "Calculando el equilibrio nutricional...",
-    "generating_step4": "Finalizando la estructura de comidas semanal...",
-    "generating_step5": "¡Plan listo! Guardando en tu perfil.",
-    "ai_processing": "Procesando IA",
-    "toast_success": "¡Plan semanal generado con éxito!"
+    "next": "Next",
+    "generate": "Generate Plan",
+    "toast_error_title": "Failed to Generate Plan",
+    "generating_step1": "Analyzing your goals and preferences...",
+    "generating_step2": "Adapting plan to local cuisine in {{country}}...",
+    "generating_step2_generic": "Adapting plan to general Western cuisine...",
+    "generating_step3": "Calculating nutritional balance...",
+    "generating_step4": "Finalizing weekly meal structure...",
+    "generating_step5": "Plan ready! Saving to your profile.",
+    "ai_processing": "AI Processing",
+    "toast_success": "Weekly plan generated successfully!"
   },
   "countries": {
-    "united_states": "Estados Unidos",
-    "mexico": "México",
+    "united_states": "United States",
+    "mexico": "Mexico",
     "spain": "Spain",
     "argentina": "Argentina",
-    "brazil": "Brasil",
-    "dominican_republic": "República Dominicana",
+    "brazil": "Brazil",
+    "dominican_republic": "Dominican Republic",
     "colombia": "Colombia",
     "chile": "Chile",
-    "peru": "Perú"
+    "peru": "Peru"
   },
   "settings": {
-    "title": "Ajustes",
-    "subtitle": "Gestiona tu perfil, objetivos y preferencias.",
+    "title": "Settings",
+    "subtitle": "Manage your profile, goals, and preferences.",
     "profileCard": {
-      "namePlaceholder": "Completar Perfil",
-      "viewAndEdit": "Ver y Editar Perfil"
+      "namePlaceholder": "Complete Profile",
+      "viewAndEdit": "View and Edit Profile"
     },
     "account": {
-      "title": "Cuenta",
-      "personalDetails": "Detalles Personales",
-      "preferences": "Preferencias",
-      "reminders": "Recordatorios"
+      "title": "Account",
+      "personalDetails": "Personal Details",
+      "preferences": "Preferences",
+      "reminders": "Reminders"
     },
-    "language": "Idioma",
+    "language": "Language",
     "goals": {
-      "title": "Objetivos y Seguimiento",
-      "editNutrition": "Metas Nutricionales",
-      "editWeight": "Meta de Peso",
-      "ringColors": "Colores de Anillos"
+      "title": "Goals & Tracking",
+      "editNutrition": "Nutritional Goals",
+      "editWeight": "Weight Goal",
+      "ringColors": "Ring Colors"
     },
     "support": {
-      "title": "Soporte y Legal",
-      "requestFeature": "Solicitar una Función",
-      "supportEmail": "Contactar Soporte",
-      "terms": "Términos de Servicio",
-      "privacy": "Política de Privacidad"
+      "title": "Support & Legal",
+      "requestFeature": "Request a Feature",
+      "supportEmail": "Contact Support",
+      "terms": "Terms of Service",
+      "privacy": "Privacy Policy"
     },
     "social": {
-      "title": "Redes Sociales",
+      "title": "Social Media",
       "instagram": "Instagram",
       "tiktok": "TikTok"
     },
     "actions": {
-      "title": "Acciones",
-      "signOut": "Cerrar Sesión",
-      "deleteAccount": "Eliminar Cuenta"
+      "title": "Actions",
+      "signOut": "Sign Out",
+      "deleteAccount": "Delete Account"
     },
     "deleteDialog": {
-      "title": "¿Estás absolutamente seguro?",
-      "description": "Esta acción no se puede deshacer. Esto eliminará permanentemente tu cuenta y todos tus datos, incluidos registros y progreso.",
-      "cancel": "Cancelar",
-      "confirm": "Eliminar Cuenta"
+      "title": "Are you absolutely sure?",
+      "description": "This action cannot be undone. This will permanently delete your account and remove your data from our servers.",
+      "cancel": "Cancel",
+      "confirm": "Delete Account"
     }
   },
   "reminders": {
-    "title": "Recordatorios",
-    "subtitle": "Configurar Alertas",
-    "description": "Recibe notificaciones locales para mantener tus hábitos. Máximo 4 al día.",
-    "meals_title": "Comidas",
-    "meals_desc": "Desayuno, Almuerzo y Cena",
-    "water_title": "Hidratación",
-    "water_desc": "Aviso suave por la tarde",
-    "weight_title": "Peso y Progreso",
-    "weight_desc": "Lunes y Jueves (9am)",
-    "toast_enabled": "Recordatorios activados",
-    "toast_disabled": "Recordatorios desactivados",
-    "toast_denied": "Permisos de notificación denegados"
+    "title": "Reminders",
+    "subtitle": "Configure Alerts",
+    "description": "Receive local notifications to maintain your habits. Max 4 per day.",
+    "meals_title": "Meals",
+    "meals_desc": "Breakfast, Lunch, and Dinner",
+    "water_title": "Hydration",
+    "water_desc": "Gentle afternoon nudge",
+    "weight_title": "Weight & Progress",
+    "weight_desc": "Mondays & Thursdays (9am)",
+    "toast_enabled": "Reminders enabled",
+    "toast_disabled": "Reminders disabled",
+    "toast_denied": "Notification permissions denied"
   },
   "edit_profile": {
-    "title": "Editar Perfil",
-    "full_name": "Nombre y Apellido",
-    "save": "Guardar Cambios",
-    "toast_error": "Fallo al guardar el perfil.",
-    "age": "Edad",
-    "height": "Altura",
-    "weight": "Peso",
-    "years_unit": "años",
-    "gender": "Género",
-    "goal": "Objetivo",
-    "experience": "Experiencia",
-    "gender_female": "Femenino",
-    "gender_male": "Masculino",
-    "gender_not_say": "Prefiero no decirlo",
-    "goal_lose": "Perder Peso",
-    "goal_maintain": "Mantener Peso",
-    "goal_gain": "Ganar Peso",
-    "experience_several": "Usé varias apps",
-    "experience_one_or_two": "Usé una o dos apps",
-    "experience_first_time": "Primera vez usando una app"
+    "title": "Edit Profile",
+    "full_name": "Full Name",
+    "save": "Save Changes",
+    "toast_error": "Failed to save profile.",
+    "age": "Age",
+    "height": "Height",
+    "weight": "Weight",
+    "years_unit": "years",
+    "gender": "Gender",
+    "goal": "Goal",
+    "experience": "Experience",
+    "gender_female": "Female",
+    "gender_male": "Male",
+    "gender_not_say": "Prefer not to say",
+    "goal_lose": "Lose Weight",
+    "goal_maintain": "Maintain Weight",
+    "goal_gain": "Gain Weight",
+    "experience_several": "Used several apps",
+    "experience_one_or_two": "Used one or two apps",
+    "experience_first_time": "First time using an app"
   },
   "preferences": {
-    "title": "Preferencias",
-    "theme_title": "Tema de la Aplicación",
-    "theme_light": "Claro",
-    "theme_dark": "Oscuro",
-    "theme_system": "Sistema",
-    "time_format_title": "Formato de Hora",
-    "time_format_12h": "12 Horas (AM/PM)",
-    "time_format_24h": "24 Horas",
-    "toast_error": "Fallo al guardar la preferencia."
+    "title": "Preferences",
+    "theme_title": "App Theme",
+    "theme_light": "Light",
+    "theme_dark": "Dark",
+    "theme_system": "System",
+    "time_format_title": "Time Format",
+    "time_format_12h": "12 Hours (AM/PM)",
+    "time_format_24h": "24 Hours",
+    "toast_error": "Failed to save preference."
   },
   "nutritional_goals": {
-    "title": "Metas Nutricionales",
-    "daily_goals": "Metas Diarias de Macros",
-    "subtitle": "Ajusta tus objetivos diarios. Los cambios se guardan automáticamente.",
-    "calories": "Calorías",
-    "protein": "Proteína",
-    "carbs": "Carbohidratos",
-    "fats": "Grasas",
-    "sugars": "Azúcares",
-    "save_error": "Fallo al guardar las metas.",
-    "ai_suggestions": "Sugerencias de IA"
+    "title": "Nutritional Goals",
+    "daily_goals": "Daily Macro Goals",
+    "subtitle": "Adjust your daily targets. Changes are saved automatically.",
+    "calories": "Calories",
+    "protein": "Protein",
+    "carbs": "Carbs",
+    "fats": "Fats",
+    "sugars": "Sugars",
+    "save_error": "Failed to save goals.",
+    "ai_suggestions": "AI Suggestions"
   },
   "ai_suggestions": {
-    "workouts_label": "Entrenamientos Semanales",
-    "workouts_per_week": "por semana",
-    "workouts_light": "Ligero (1-2)",
-    "workouts_moderate": "Moderado (3-4)",
-    "workouts_active": "Activo (5-6)",
-    "workouts_very_active": "Muy Activo (7+)",
-    "goal_weight_label": "Meta de Peso",
-    "rate_label": "Ritmo Semanal",
-    "week": "semana",
-    "summary_title": "Resumen y Generación",
-    "disclaimer": "La IA utilizará esta información para calcular tus objetivos óptimos de calorías y macros.",
-    "continue": "Continuar",
-    "generate": "Generar Metas",
-    "generate_loading": "Generando...",
-    "toast_success": "¡Nuevas metas generadas y guardadas!",
-    "toast_error": "Fallo al generar metas."
+    "workouts_label": "Weekly Workouts",
+    "workouts_per_week": "per week",
+    "workouts_light": "Light (1-2)",
+    "workouts_moderate": "Moderate (3-4)",
+    "workouts_active": "Active (5-6)",
+    "workouts_very_active": "Very Active (7+)",
+    "goal_weight_label": "Goal Weight",
+    "rate_label": "Weekly Rate",
+    "week": "week",
+    "summary_title": "Summary & Generation",
+    "disclaimer": "AI will use this info to calculate your optimal calorie and macro targets.",
+    "continue": "Continue",
+    "generate": "Generate Goals",
+    "generate_loading": "Generating...",
+    "toast_success": "New goals generated and saved!",
+    "toast_error": "Failed to generate goals."
   },
   "weight_goal": {
-    "title": "Meta de Peso",
-    "change_button": "Cambiar Meta",
-    "current_weight": "Peso Actual",
-    "height": "Altura",
-    "gender": "Género",
-    "updated_today": "Actualizado hoy"
+    "title": "Weight Goal",
+    "change_button": "Change Goal",
+    "current_weight": "Current Weight",
+    "height": "Height",
+    "gender": "Gender",
+    "updated_today": "Updated today"
   },
   "ring_colors": {
-    "title": "Colores de Anillos",
-    "subtitle": "Entiende lo que significa cada color en tus anillos de progreso diario.",
-    "green_title": "Verde (Principal)",
-    "green_desc": "Estás dentro del 10% de tu objetivo (o lo has superado de forma segura).",
-    "yellow_title": "Amarillo (Ámbar)",
-    "yellow_desc": "Estás entre un 10% y un 20% por encima de tu objetivo (ej. demasiadas calorías).",
-    "red_title": "Rojo (Destructivo)",
-    "red_desc": "Estás más del 20% por encima de tu objetivo, indicando un exceso significativo.",
-    "dotted_title": "Línea Punteada",
-    "dotted_desc": "No hay datos registrados para este día aún."
+    "title": "Ring Colors",
+    "subtitle": "Understand what each color means on your daily progress rings.",
+    "green_title": "Green (Main)",
+    "green_desc": "You are within 10% of your goal (or exceeded it safely).",
+    "yellow_title": "Yellow (Amber)",
+    "yellow_desc": "You are between 10% and 20% over your goal (e.g. too many calories).",
+    "red_title": "Red (Destructive)",
+    "red_desc": "You are more than 20% over your goal, indicating significant excess.",
+    "dotted_title": "Dotted Line",
+    "dotted_desc": "No data logged for this day yet."
   },
   "request_feature": {
-    "title": "Solicitar una Función",
-    "subtitle": "¡Ayúdanos a mejorar Calorel!",
-    "description": "Vota por funciones existentes o sugiere una nueva. Las más votadas son priorizadas.",
-    "search_placeholder": "Buscar solicitudes existentes...",
-    "create_button": "Nueva Solicitud",
-    "delete_toast_success": "Solicitud eliminada con éxito.",
-    "delete_toast_error": "Fallo al eliminar solicitud."
+    "title": "Request a Feature",
+    "subtitle": "Help us improve Calorel!",
+    "description": "Vote for existing features or suggest a new one. Most voted are prioritized.",
+    "search_placeholder": "Search existing requests...",
+    "create_button": "New Request",
+    "delete_toast_success": "Request deleted successfully.",
+    "delete_toast_error": "Failed to delete request."
   },
   "new_request_drawer": {
-    "title": "Sugerir una Nueva Función",
-    "description": "Describe la función que te gustaría ver en Calorel.",
-    "title_label": "Título",
-    "title_placeholder": "Ej: Añadir integración con Apple Health",
-    "desc_label": "Descripción Detallada",
-    "desc_placeholder": "Explica por qué es importante esta función y cómo debería funcionar.",
-    "submit_button": "Enviar Solicitud",
-    "cancel_button": "Cancelar",
-    "toast_success": "¡Solicitud de función enviada con éxito!",
-    "toast_error": "Fallo al enviar solicitud."
+    "title": "Suggest a New Feature",
+    "description": "Describe the feature you would like to see in Calorel.",
+    "title_label": "Title",
+    "title_placeholder": "e.g., Add Apple Health integration",
+    "desc_label": "Detailed Description",
+    "desc_placeholder": "Explain why this feature is important and how it should work.",
+    "submit_button": "Submit Request",
+    "cancel_button": "Cancel",
+    "toast_success": "Feature request submitted successfully!",
+    "toast_error": "Failed to submit request."
   },
   "language_drawer": {
-    "title": "Seleccionar Idioma"
+    "title": "Select Language"
   },
   "toasts": {
-    "coming_soon_title": "Próximamente",
-    "coming_soon_desc": "Esta función está en desarrollo.",
-    "delete_success_title": "Cuenta Eliminada",
-    "delete_success_desc": "Tu cuenta y todos los datos asociados han sido eliminados permanentemente.",
-    "delete_error_title": "Fallo al Eliminar"
+    "coming_soon_title": "Coming Soon",
+    "coming_soon_desc": "This feature is currently in development.",
+    "delete_success_title": "Account Deleted",
+    "delete_success_desc": "Your account and all associated data have been permanently deleted.",
+    "delete_error_title": "Failed to Delete"
   },
   "tutorial": {
-    "welcome_title": "¡Bienvenido a Calorel!",
-    "welcome_content": "Vamos a dar un rápido recorrido por las funciones principales para que comiences tu viaje de salud.",
-    "carousel_title": "Tu Resumen Diario",
-    "carousel_content": "Aquí encontrarás tu progreso diario de calorías, macros y otras métricas clave. ¡Desliza para ver más detalles!",
-    "scanner_title": "Registra Todo Fácilmente",
-    "scanner_content": "Toca el botón central para abrir el menú. Puedes escanear tu comida con IA, registrar un ejercicio o añadir entradas manualmente.",
-    "progress_title": "Sigue Tu Progreso",
-    "progress_content": "Visita la pestaña de Progreso para ver la evolución de tu peso, tu IMC y seguir tus rachas diarias.",
-    "settings_title": "Personaliza Tu Experiencia",
-    "settings_content": "En Ajustes, puedes modificar tus metas, cambiar preferencias y gestionar tu cuenta.",
-    "finish": "Finalizar",
-    "next": "Siguiente"
+    "welcome_title": "Welcome to Calorel!",
+    "welcome_content": "Let's take a quick tour of the main features to start your health journey.",
+    "carousel_title": "Your Daily Summary",
+    "carousel_content": "Here you will find your daily progress for calories, macros, and other key metrics. Swipe to see more details!",
+    "scanner_title": "Log Everything Easily",
+    "scanner_content": "Tap the center button to open the menu. You can scan your food with AI, log an exercise, or add entries manually.",
+    "progress_title": "Track Your Progress",
+    "progress_content": "Visit the Progress tab to see your weight evolution, BMI, and track your daily streaks.",
+    "settings_title": "Customize Your Experience",
+    "settings_content": "In Settings, you can modify your goals, change preferences, and manage your account.",
+    "finish": "Finish",
+    "next": "Next"
   },
   "notifications": {
-    "title": "Mantén la Constancia",
-    "description": "Activa las notificaciones para recibir recordatorios de comidas, hidratación y control de peso. ¡Te ayudará a no perder el ritmo!",
-    "enable_button": "Activar Notificaciones",
-    "skip_button": "Quizás más tarde"
+    "title": "Stay Consistent",
+    "description": "Turn on notifications to get reminders for meals, hydration, and weight checks. It helps you stay on track!",
+    "enable_button": "Enable Notifications",
+    "skip_button": "Maybe Later",
+    "breakfast_title": "Good Morning",
+    "breakfast_body": "Start your day by logging your breakfast.",
+    "food_title": "Lunch Time",
+    "food_body_1": "What's for lunch? Log it now.",
+    "dinner_title_1": "Dinner Time",
+    "dinner_body_1": "Don't forget to log your last meal.",
+    "snack_title": "Snack Time",
+    "snack_body": "Quick break, log your snack.",
+    "water_title_1": "Hydration",
+    "water_body_1": "Your body needs water. Drink a glass!",
+    "water_title_2": "Healthy Habit",
+    "water_body_2": "Stay hydrated for better results.",
+    "weight_title_1": "Weight Control",
+    "weight_body_1": "Update your weight today to see your progress."
   }
 }
