--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -202,6 +202,7 @@
   "bottom_nav": {
     "home": "Home",
     "settings": "Settings",
+    "profile": "Profile",
     "progress": "Progress",
     "diets": "Diets",
     "log_title": "Log Activity",
@@ -491,11 +492,12 @@
     "peru": "Peru"
   },
   "settings": {
-    "title": "Settings",
-    "subtitle": "Manage your profile, goals, and preferences.",
+    "title": "Profile",
+    "subtitle": "Your personal space",
+    "configuration_title": "Configuration",
     "profileCard": {
       "namePlaceholder": "Complete Profile",
-      "viewAndEdit": "View and Edit Profile"
+      "viewAndEdit": "Edit Details"
     },
     "account": {
       "title": "Account",
