[dyad] wrote 5 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,6 +7,8 @@
     "sign_out": "Sign Out",
     "retry": "Retry",
     "cancel": "Cancel",
+    "continue": "Continue",
+    "back": "Back",
     "error_friendly": "Something went wrong. Please check your connection and try again.",
     "ai_limit_reached": "AI Limit Reached",
     "ai_limit_daily_desc": "You have reached the daily limit of {{limit}} uses for this feature. Please come back tomorrow to continue.",
@@ -16,10 +18,15 @@
   },
   "auth": {
     "email_label": "Email address",
+    "email_placeholder": "your@email.com",
     "password_label": "Password",
+    "password_placeholder": "Minimum 6 characters",
+    "password_input_placeholder": "Password",
     "new_password_label": "New Password",
     "sign_in_button": "Sign In",
+    "sign_in_action": "Sign In",
     "sign_up_button": "Create Account",
+    "create_account_action": "Create Account",
     "forgot_password": "Forgot your password?",
     "reset_password_title": "Reset Password",
     "reset_password_desc": "Enter your email address and we will send you a link to reset your password.",
@@ -34,9 +41,20 @@
     "sign_in_link": "Sign In",
     "social_provider_text": "Or continue with",
     "first_name_label": "First Name",
-    "first_name_placeholder": "John",
+    "first_name_placeholder": "First Name",
     "last_name_label": "Last Name",
-    "last_name_placeholder": "Doe",
+    "last_name_placeholder": "Last Name",
+    "error_first_name_required": "First name is required.",
+    "error_last_name_required": "Last name is required.",
+    "error_email_invalid": "Please enter a valid email.",
+    "error_password_length": "Password must be at least 6 characters.",
+    "error_password_empty": "Password cannot be empty.",
+    "step_email_title": "What's your email?",
+    "step_password_title": "Create a password",
+    "step_name_title": "What's your name?",
+    "limit_reached_title": "Account Limit Reached",
+    "limit_reached_desc": "You cannot create more accounts on this device.",
+    "signup_success_toast": "Account created successfully. Welcome!",
     "signup_success": {
       "title": "Almost there!",
       "subtitle": "Confirm your email",
@@ -47,6 +65,13 @@
   },
   "login": {
     "welcome": "Welcome to Calorel",
+    "welcome_back": "Welcome back",
+    "enter_details": "Enter your details to continue",
+    "hello_calorel": "Hi, I'm <1>Calorel</1>",
+    "tagline": "Your intelligent companion to eat better, move more, and reach your health goals without stress.",
+    "start_now": "Start Now",
+    "have_account": "I already have an account",
+    "back_to_home": "Back to start",
     "subtitle": "Log in to continue your health journey.",
     "create_account": "Create your Account",
     "create_account_subtitle": "Start your health journey with us today.",
