--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -7,6 +7,8 @@
     "sign_out": "Cerrar Sesión",
     "retry": "Reintentar",
     "cancel": "Cancelar",
+    "continue": "Continuar",
+    "back": "Volver",
     "error_friendly": "Algo salió mal. Por favor, verifica tu conexión e inténtalo de nuevo.",
     "ai_limit_reached": "Límite de IA alcanzado",
     "ai_limit_daily_desc": "Has alcanzado el límite de {{limit}} usos diarios para esta función. Vuelve mañana para continuar.",
@@ -16,10 +18,15 @@
   },
   "auth": {
     "email_label": "Correo electrónico",
+    "email_placeholder": "tu@email.com",
     "password_label": "Contraseña",
+    "password_placeholder": "Mínimo 6 caracteres",
+    "password_input_placeholder": "Contraseña",
     "new_password_label": "Nueva Contraseña",
     "sign_in_button": "Iniciar Sesión",
+    "sign_in_action": "Iniciar Sesión",
     "sign_up_button": "Crear Cuenta",
+    "create_account_action": "Crear Cuenta",
     "forgot_password": "¿Olvidaste tu contraseña?",
     "reset_password_title": "Recuperar Contraseña",
     "reset_password_desc": "Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.",
@@ -34,9 +41,20 @@
     "sign_in_link": "Inicia Sesión",
     "social_provider_text": "O continúa con",
     "first_name_label": "Nombre",
-    "first_name_placeholder": "Juan",
+    "first_name_placeholder": "Nombre",
     "last_name_label": "Apellido",
-    "last_name_placeholder": "Pérez",
+    "last_name_placeholder": "Apellido",
+    "error_first_name_required": "El nombre es requerido.",
+    "error_last_name_required": "El apellido es requerido.",
+    "error_email_invalid": "Por favor, introduce un email válido.",
+    "error_password_length": "La contraseña debe tener al menos 6 caracteres.",
+    "error_password_empty": "La contraseña no puede estar vacía.",
+    "step_email_title": "¿Cuál es tu email?",
+    "step_password_title": "Crea una contraseña",
+    "step_name_title": "¿Cómo te llamas?",
+    "limit_reached_title": "Límite de Cuentas Alcanzado",
+    "limit_reached_desc": "No puedes crear más cuentas en este dispositivo.",
+    "signup_success_toast": "Cuenta creada correctamente. ¡Bienvenido!",
     "signup_success": {
       "title": "¡Casi listo!",
       "subtitle": "Confirma tu correo",
@@ -47,6 +65,13 @@
   },
   "login": {
     "welcome": "Bienvenido a Calorel",
+    "welcome_back": "Bienvenido de nuevo",
+    "enter_details": "Ingresa tus datos para continuar",
+    "hello_calorel": "Hola, soy <1>Calorel</1>",
+    "tagline": "Tu compañero inteligente para comer mejor, moverte más y alcanzar tus metas de salud sin estrés.",
+    "start_now": "Empezar Ahora",
+    "have_account": "Ya tengo una cuenta",
+    "back_to_home": "Volver al inicio",
     "subtitle": "Inicia sesión para continuar tu viaje de salud.",
     "create_account": "Crea tu Cuenta",
     "create_account_subtitle": "Comienza tu viaje de salud con nosotros hoy.",
