[dyad] wrote 3 file(s)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -67,7 +67,7 @@
     "welcome": "Welcome to Calorel",
     "welcome_back": "Welcome back",
     "enter_details": "Enter your details to continue",
-    "hello_calorel": "Hi, I'm <1>Calorel</1>",
+    "hello_calorel": "Welcome to <1>Calorel</1>",
     "tagline": "Your intelligent companion to eat better, move more, and reach your health goals without stress.",
     "start_now": "Start Now",
     "have_account": "I already have an account",
