--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -67,7 +67,7 @@
     "welcome": "Bienvenido a Calorel",
     "welcome_back": "Bienvenido de nuevo",
     "enter_details": "Ingresa tus datos para continuar",
-    "hello_calorel": "Hola, soy <1>Calorel</1>",
+    "hello_calorel": "Bienvenido a <1>Calorel</1>",
     "tagline": "Tu compañero inteligente para comer mejor, moverte más y alcanzar tus metas de salud sin estrés.",
     "start_now": "Empezar Ahora",
     "have_account": "Ya tengo una cuenta",
